# lian

./: .gitignore  ARCHITECTURE.md  ASCIILOGO.txt  Cargo.toml  README.md  build.sh  config.toml.example  install.sh
changelog/: CHANGES_pacman-db.lck.md
src/: config.rs  deepseek.rs  main.rs  package_manager.rs  prompt.rs  report.rs  sysinfo.rs  tui.rs
src/package_manager/: mod.rs  parser.rs  streaming.rs  types.rs
src/tui/: dashboard.rs  input.rs  install.rs  layout.rs  mod.rs  query.rs  remove.rs  settings.rs  shell.rs  state.rs  theme.rs  update.rs
